# OpenEnv-Synaptrix

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  baseline_scores.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: app.py
email_intelligence/: __init__.py  agents.py  api.py  data.py  env.py  graders.py  models.py  openenv_env.py  openenv_models.py  service.py  tasks.py
server/: app.py
static/: analytics.html  app.js  automation.html  composer.html  health.html  history.html  index.html  reply.html  settings.html  styles.css  tasks.html
