[project]
name = "synaptrix-mailos"
version = "0.1.0"
description = "AI-powered multi-agent email decision intelligence platform"
authors = [
  { name = "Kritharth Jain" }
]

dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "openai>=1.40,<2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
